2017.5/_sources/plugins/available/composition/index.txt
composition
===========

.. raw:: html

   <table class="table plugin-info">
     <tbody>
       <tr>
         <th scope="row">Description</th>
         <td>
         	
         	This QIIME 2 plugin supports methods for compositional data analysis.<br/>
         	
         </td>
       </tr>
       <tr>
         <th scope="row">Version</th>
         <td>2017.5.0</td>
       </tr>
       <tr>
         <th scope="row">Website</th>
         <td><a href="https://github.com/qiime2/q2-composition" rel="noopener">https://github.com/qiime2/q2-composition</a></td>
       </tr>
       <tr>
         <th scope="row">Support</th>
         <td>
           
           Please post to the QIIME 2 forum for help with this plugin: <a href="https://forum.qiime2.org" rel="noopener">https://forum.qiime2.org</a><br/>
           
         </td>
       </tr>
       <tr>
         <th scope="row">Citation</th>
         <td>
           
           Analysis of composition of microbiomes: a novel method for studying microbial composition.<br/>
           
           Mandal S, Van Treuren W, White RA, Eggesbø M, Knight R, Peddada SD.<br/>
           
           Microb Ecol Health Dis. 2015 May 29;26:27663. doi: 10.3402/mehd.v26.27663.<br/>
           
         </td>
       </tr>
     </tbody>
   </table>

Methods
-------


.. toctree::
   :maxdepth: 1

   
   add_pseudocount
   


Visualizers
-----------


.. toctree::
   :maxdepth: 1

   
   ancom
   
